--- a/index.html
+++ b/index.html
@@ -26,54 +26,72 @@
   <p>This is my web development portfolio.</p>
 </section>
 
-
 <section id="work">
   <h2>These are some of my projects</h2>
 
+<div id = "center">
+    <div id="grid">
+        <a href="https://codepen.io/notan0209/pen/NWampxW"
+          target="_blank"
+          class="project project-tile">
+          <img id="img"
+            src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg"
+            alt="project"/>
+          <p id="project-title">Tribute Page</p>
+        </a>
+    </div>
 
-<div id="grid">
-    <a href="https://codepen.io/notan0209/pen/NWampxW"
-      target="_blank"
-      class="project project-tile">
-      <img id="img"
-        src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg"
-        alt="project"/>
-      <p id="project-title">Tribute Page</p>
-    </a>
-</div>
+    <div id = "grid">
+        <a href="https://codepen.io/notan0209/pen/abVbJdr"
+            target="_blank"
+            class="project project-tile">
+        <img id = "img"
+            src="https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg"
+              alt="project"/>
+        <p id="project-title">Survey Form</p>
+        </a>
+    </div>
 
-<div id = "grid">
-    <a href="https://codepen.io/notan0209/pen/abVbJdr"
+    <div id="grid">
+      <a href="https://codepen.io/notan0209/pen/LYOMErz"
         target="_blank"
         class="project project-tile">
-    <img id = "img"
-        src="https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg"
+        <img id="img"
+          src="img/landpage.jpg"
           alt="project"/>
-    <p id="project-title">Survey Form</p>
-    </a>
+        <p id="project-title">Landing Page</p>
+      </a>
+    </div>
+
+    <div id="grid">
+        <a href="https://codepen.io/notan0209/pen/wvpEyNb"
+          target="_blank"
+          class="project project-tile">
+          <img id="img"
+            src="img/techdoc.jpg"
+            alt="project"/>
+          <p id="project-title">Technical Documentation Page</p>
+        </a>
+    </div>
 </div>
 
-<div id="grid">
-  <a href="https://codepen.io/notan0209/pen/LYOMErz"
-    target="_blank"
-    class="project project-tile">
-    <img id="img"
-      src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg"
-      alt="project"/>
-    <p id="project-title">Landing Page</p>
-  </a>
-</div>
-
-<div id="btn">
+<button id="btn">
   <a href="https://codepen.io/your-work"
     class="btn-Show"
-    target="_blank">Show all<i class="fas fa-chevron-right"></i></a>
-</div>
+    target="_blank">Show all > <i class="fas fa-chevron-right"></i></a>
+</button>
 
 </section>
 
 <section id="contact">
   <h3>Let's work together...</h3>
+
+<div id ="callme">
+  <a id="profile-link" href="https://github.com/NOTAN0209" target="_blank"
+  class="btn contact-details"><i class="fab fa-github"></i> GitHub</a>
+  <a href="mailto:notan02091990@gmail.com" class="btn contact-details"><i class="fas fa-at"></i> Send a mail</a>
+  <a href="tel:66666666666" class="btn contact-details"><i class="fas fa-mobile-alt"></i> Call me</a>
+</div>
 
 </section>
 
