--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <div id="nav-bar">
    <nav>
     <ul>
-     <li><a class="nav-link" href="#about">About</a></li>
-     <li><a class="nav-link" href="#work">Work</a></li>
-     <li><a class="nav-link" href="#contact">Contact</a></li>
+     <li><a href="#about">About</a></li>
+     <li><a href="#work">Work</a></li>
+     <li><a href="#contact">Contact</a></li>
     </ul>
    </nav>
   </div>
@@ -30,47 +30,44 @@
   <h2>These are some of my projects</h2>
 
 <div id = "center">
+
     <div id="grid">
-        <a href="https://codepen.io/notan0209/pen/NWampxW"
-          target="_blank"
-          class="project project-tile">
-          <img id="img"
-            src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg"
-            alt="project"/>
-          <p id="project-title">Tribute Page</p>
+        <a id="link-project-tile" href="https://codepen.io/notan0209/pen/NWampxW"
+          target="_blank">
+        <img id="img"
+          src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg"
+          alt="project"/>
+      <p id="project-title">Tribute Page</p>
         </a>
     </div>
 
     <div id = "grid">
-        <a href="https://codepen.io/notan0209/pen/abVbJdr"
-            target="_blank"
-            class="project project-tile">
+        <a id="link-project-tile" href="https://codepen.io/notan0209/pen/abVbJdr"
+          target="_blank">
         <img id = "img"
-            src="https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg"
-              alt="project"/>
+          src="https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg"
+          alt="project"/>
         <p id="project-title">Survey Form</p>
         </a>
     </div>
 
     <div id="grid">
-      <a href="https://codepen.io/notan0209/pen/LYOMErz"
-        target="_blank"
-        class="project project-tile">
+        <a id="link-project-tile" href="https://codepen.io/notan0209/pen/LYOMErz"
+          target="_blank">
         <img id="img"
           src="img/landpage.jpg"
           alt="project"/>
         <p id="project-title">Landing Page</p>
-      </a>
+       </a>
     </div>
 
     <div id="grid">
-        <a href="https://codepen.io/notan0209/pen/wvpEyNb"
-          target="_blank"
-          class="project project-tile">
-          <img id="img"
-            src="img/techdoc.jpg"
-            alt="project"/>
-          <p id="project-title">Technical Documentation Page</p>
+        <a id="link-project-tile" href="https://codepen.io/notan0209/pen/wvpEyNb"
+          target="_blank">
+        <img id="img"
+          src="img/techdoc.jpg"
+          alt="project"/>
+         <p id="project-title">Technical Documentation Page</p>
         </a>
     </div>
 </div>
@@ -84,15 +81,26 @@
 </section>
 
 <section id="contact">
-  <h3>Let's work together...</h3>
+
+<h3>Let's work together...</h3>
 
 <div id ="callme">
-  <a id="profile-link" href="https://github.com/NOTAN0209" target="_blank"
-  class="btn contact-details"><i class="fab fa-github"></i> GitHub</a>
-  <a href="mailto:notan02091990@gmail.com" class="btn contact-details"><i class="fas fa-at"></i> Send a mail</a>
-  <a href="tel:66666666666" class="btn contact-details"><i class="fas fa-mobile-alt"></i> Call me</a>
+
+<div>
+  <img id="call-img" src="img/git.png" alt="github">
+  <a href="https://github.com/NOTAN0209" target="_blank"> GitHub</a>
 </div>
 
+<div>
+  <img id="call-img" src="img/mail.png" alt="mail">
+  <a href="mailto:notan02091990@gmail.com"><i class="fas fa-at"></i> Send a mail</a>
+</div>
+
+<div>
+  <img id="call-img" src="img/tell.png" alt="tell">
+  <a href="tel:66666666666"><i class="fas fa-mobile-alt"></i> Call me</a>
+</div>
+</div>
 </section>
 
 <footer>
