--- a/index.html
+++ b/index.html
@@ -86,21 +86,22 @@
 
 <div id ="callme">
 
-<div>
+<div id = "cont">
   <img id="call-img" src="img/git.png" alt="github">
   <a href="https://github.com/NOTAN0209" target="_blank"> GitHub</a>
 </div>
 
-<div>
+<div id = "cont">
   <img id="call-img" src="img/mail.png" alt="mail">
   <a href="mailto:notan02091990@gmail.com"><i class="fas fa-at"></i> Send a mail</a>
 </div>
 
-<div>
+<div id = "cont">
   <img id="call-img" src="img/tell.png" alt="tell">
   <a href="tel:66666666666"><i class="fas fa-mobile-alt"></i> Call me</a>
 </div>
 </div>
+
 </section>
 
 <footer>
