--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <img id="img"
           src="img/techdoc.jpg"
           alt="project"/>
-         <p id="project-title">Technical Documentation Page</p>
+         <p id="project-title">Documentation Page</p>
         </a>
     </div>
 </div>
@@ -93,12 +93,12 @@
 
 <div id = "cont">
   <img id="call-img" src="img/mail.png" alt="mail">
-  <a href="mailto:notan02091990@gmail.com"><i class="fas fa-at"></i> Send a mail</a>
+  <a href="mailto:notan02091990@gmail.com"></i> Send a mail</a>
 </div>
 
 <div id = "cont">
   <img id="call-img" src="img/tell.png" alt="tell">
-  <a href="tel:66666666666"><i class="fas fa-mobile-alt"></i> Call me</a>
+  <a href="tel:66666666666"> Call me</a>
 </div>
 </div>
 
