update mobile adapt

--- a/index.html
+++ b/index.html
@@ -88,17 +88,17 @@
 
 <div id = "cont">
   <img id="call-img" src="img/git.png" alt="github">
-  <a href="https://github.com/NOTAN0209" target="_blank"> GitHub</a>
+  <a href="https://github.com/NOTAN0209" target="_blank">GitHub</a>
 </div>
 
 <div id = "cont">
   <img id="call-img" src="img/mail.png" alt="mail">
-  <a href="mailto:notan02091990@gmail.com"></i> Send a mail</a>
+  <a href="mailto:notan02091990@gmail.com">Send a mail</a>
 </div>
 
 <div id = "cont">
   <img id="call-img" src="img/tell.png" alt="tell">
-  <a href="tel:66666666666"> Call me</a>
+  <a href="tel:66666666666">Call me</a>
 </div>
 </div>
 
