--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <link href="css/style.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <div id="nav-bar">
+  <div id="navbar">
    <nav>
     <ul>
-     <li><a href="#about">About</a></li>
+     <li><a href="#welcome-section">About</a></li>
      <li><a href="#work">Work</a></li>
      <li><a href="#contact">Contact</a></li>
     </ul>
@@ -21,53 +21,53 @@
 
 <body>
 
-<section id="about">
+<section id="welcome-section">
   <h1>Hello, my name is Michael.</h1>
   <p>This is my web development portfolio.</p>
 </section>
 
-<section id="work">
+<section id="projects">
   <h2>These are some of my projects</h2>
 
 <div id = "center">
 
-    <div id="grid">
-        <a id="link-project-tile" href="https://codepen.io/notan0209/pen/NWampxW"
+    <div class="project-tile">
+        <a id="profile-link" href="https://codepen.io/notan0209/pen/NWampxW"
           target="_blank">
         <img id="img"
           src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg"
           alt="project"/>
-      <p id="project-title">Tribute Page</p>
+      <p class="project-title">Tribute Page</p>
         </a>
     </div>
 
-    <div id = "grid">
-        <a id="link-project-tile" href="https://codepen.io/notan0209/pen/abVbJdr"
+    <div class="project-tile">
+        <a id="profile-link" href="https://codepen.io/notan0209/pen/abVbJdr"
           target="_blank">
         <img id = "img"
           src="https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg"
           alt="project"/>
-        <p id="project-title">Survey Form</p>
+        <p class="project-title">Survey Form</p>
         </a>
     </div>
 
-    <div id="grid">
-        <a id="link-project-tile" href="https://codepen.io/notan0209/pen/LYOMErz"
+    <div class="project-tile">
+        <a id="profile-link" href="https://codepen.io/notan0209/pen/LYOMErz"
           target="_blank">
         <img id="img"
           src="img/landpage.jpg"
           alt="project"/>
-        <p id="project-title">Landing Page</p>
+        <p class="project-title">Landing Page</p>
        </a>
     </div>
 
-    <div id="grid">
-        <a id="link-project-tile" href="https://codepen.io/notan0209/pen/wvpEyNb"
+    <div class="project-tile">
+        <a id="profile-link" href="https://codepen.io/notan0209/pen/wvpEyNb"
           target="_blank">
         <img id="img"
           src="img/techdoc.jpg"
           alt="project"/>
-         <p id="project-title">Documentation Page</p>
+         <p class="project-title">Documentation Page</p>
         </a>
     </div>
 </div>
