--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <nav>
     <ul>
      <li><a href="#welcome-section">About</a></li>
-     <li><a href="#work">Work</a></li>
+     <li><a href="#projects">Work</a></li>
      <li><a href="#contact">Contact</a></li>
     </ul>
    </nav>
@@ -36,7 +36,7 @@
           target="_blank">
         <img id="img"
           src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg"
-          alt="project"/>
+          alt="Tribute Page"/>
       <p class="project-title">Tribute Page</p>
         </a>
     </div>
@@ -46,7 +46,7 @@
           target="_blank">
         <img id = "img"
           src="https://cdn.freecodecamp.org/testable-projects-fcc/images/survey-form-background.jpeg"
-          alt="project"/>
+          alt="Survey Form"/>
         <p class="project-title">Survey Form</p>
         </a>
     </div>
@@ -56,7 +56,7 @@
           target="_blank">
         <img id="img"
           src="img/landpage.jpg"
-          alt="project"/>
+          alt="Landing Page"/>
         <p class="project-title">Landing Page</p>
        </a>
     </div>
@@ -66,8 +66,8 @@
           target="_blank">
         <img id="img"
           src="img/techdoc.jpg"
-          alt="project"/>
-         <p class="project-title">Documentation Page</p>
+          alt="Document Page"/>
+         <p class="project-title">Document Page</p>
         </a>
     </div>
 </div>
@@ -75,7 +75,7 @@
 <button id="btn">
   <a href="https://codepen.io/your-work"
     class="btn-Show"
-    target="_blank">Show all > <i class="fas fa-chevron-right"></i></a>
+    target="_blank">Show all ></i></a>
 </button>
 
 </section>
